--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,6 @@
           <version>2.3.2</version>
       </dependency>
 
-
-
   </dependencies>
 
   <build>
@@ -131,9 +129,17 @@
         <plugin>
             <groupId>org.sonarsource.scanner.maven</groupId>
             <artifactId>sonar-maven-plugin</artifactId>
-            <version>5.5.0.6356</version> <!-- Use the latest version from Maven Central -->
+            <version>5.5.0.6356</version>
         </plugin>
 
+        <plugin>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-maven-plugin</artifactId>
+            <version>4.25.1</version>
+            <configuration>
+                <propertyFile> liquibase.properties </propertyFile>
+            </configuration>
+        </plugin>
 
     </plugins>
   </build>
