--- a/.github/workflows/hospital-ci.yml
+++ b/.github/workflows/hospital-ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main", "master","addfeature", "dev" ]
   pull_request:
-    branches: [ "main"]
+    branches: [ "main","addfeature"]
     
 jobs:
   build:
