--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
       <scope>provided</scope>
     </dependency>
 
+      <dependency>
+          <groupId>com.zaxxer</groupId>
+          <artifactId>HikariCP</artifactId>
+          <version>5.1.0</version>
+      </dependency>
+
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
