--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>3.4.0</version>
         <configuration>
-          <failOnMissingWebXml>false</failOnMissingWebXml>
+          <failOnMissingWebXml>true</failOnMissingWebXml>
         </configuration>
       </plugin>
 
