--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,14 +14,14 @@
         <url-pattern>/patients</url-pattern>
     </servlet-mapping>
 
-   <!-- <servlet>
+    <servlet>
         <servlet-name>DoctorServlet</servlet-name>
         <servlet-class>com.hospital.servlet.DoctorServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>DoctorServlet</servlet-name>
         <url-pattern>/doctor</url-pattern>
-    </servlet-mapping>-->
+    </servlet-mapping>
 
     <servlet>
         <servlet-name>AppointmentServlet</servlet-name>
