--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,14 @@
   </properties>
 
   <dependencies>
-    <dependency>
+      <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version> 4.13.1 </version>
       <scope>test</scope>
     </dependency>
-    <dependency>
+
+      <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version> 4.0.1 </version>
@@ -32,18 +33,23 @@
     </dependency>
 
       <dependency>
+          <groupId>org.mindrot</groupId>
+          <artifactId>jbcrypt</artifactId>
+          <version>0.4</version>
+      </dependency>
+
+      <dependency>
           <groupId>com.zaxxer</groupId>
           <artifactId>HikariCP</artifactId>
           <version>5.1.0</version>
       </dependency>
-
-    <dependency>
+      <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
       <version> 8.4.0</version>
       <scope>runtime</scope>
     </dependency>
-    <dependency>
+      <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.9.6</version>
